traefik/https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# HTTP ingresses die redirecten naar HTTPS voor alle apps
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opennotificaties-http-redirect
  namespace: opennotificaties
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: notificaties.foundationlayer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opennotificaties
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openzaak-http-redirect
  namespace: openzaak
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: openzaak.foundationlayer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openzaak
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: objecten-http-redirect
  namespace: objecten
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: objecten.foundationlayer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: objecten
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: objecttypen-http-redirect
  namespace: objecttypen
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: objecttypen.foundationlayer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: objecttypen
                port:
                  number: 80
